# codeindex

./: .codeindex.toml.example  .env.example  AGENTS.md  CHANGELOG.md  Dockerfile  README.md  index_codebase.py  main.py  pyproject.toml  search.py
.github/workflows/: ci.yml  release.yml
codeindex/: agent_skills.py  catalog.py  cli.py  config.py  doctor.py  errors.py  indexer.py  migrations.py  project_config.py  searcher.py  service.py  updater.py
docs/: AGENT_INTEGRATIONS.md
integrations/claude/: CLAUDE.md.example
integrations/codex-skill/: SKILL.md
integrations/cursor-skill/: SKILL.md
tests/: test_catalog_integration.py  test_cli.py  test_config.py  test_e2e_index_search.py  test_indexer.py  test_project_config.py  test_searcher.py  test_service.py  test_updater.py
