[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "codeindex"
version = "1.0.3"
description = "Semantic search over codebases using CocoIndex and pgvector"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "cocoindex>=0.3.34",
    "psycopg[binary]>=3.3.3",
    "pgvector>=0.4.2",
    "click>=8.3.1",
    "python-dotenv>=1.1.1",
    "rich>=14.3.3",
    "sentence-transformers>=5.2.3",
]

[dependency-groups]
dev = [
    "mypy>=1.18.2",
    "pytest>=8.4.2",
    "ruff>=0.13.2",
]

[project.scripts]
codeindex = "codeindex.cli:cli"

[tool.hatch.build.targets.wheel]
packages = ["codeindex"]

[tool.uv]
default-groups = ["dev"]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "integration: tests requiring a running PostgreSQL instance",
    "e2e: end-to-end tests with real indexing and semantic search",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "SIM"]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
check_untyped_defs = true

[[tool.mypy.overrides]]
module = ["pgvector.*"]
ignore_missing_imports = true
